<resources>
    <string name="app_name">Earthquake Monitor</string>
    <string name="settings">Settings</string>
    <string name="Significant">Significant Earthquakes</string>
    <string name="plus2">M2.5+ Earthquakes</string>
    <string name="plus1">M1.0+ Earthquakes</string>
    <string name="all">All Earthquakes</string>
    <string name="plus4">M4.5+ Earthquakes</string>

    <string name="magnitude">Magnitude</string>
    <string name="place">Place</string>
    <string name="coordinates">Coordinates</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="earthquake_types">Earthquake Types</string>
    <string name="earthquake_details">Earthquake Details</string>
    <string name="threshhold">Threshhold</string>
    <string name="datafetch">Data Fetch Interval</string>

</resources>
