<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mvs.testapplication.activity.SettingsActivity">

    <GridLayout
        android:id="@+id/gl_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="3">

        <TextView
            android:id="@+id/tv_settings_threshhold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:text="@string/threshhold" />

        <EditText
            android:id="@+id/et_settings_threshhold_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:maxEms="10"
            android:inputType="numberDecimal"
            android:hint="@string/settings" />
        <TextView
            android:id="@+id/tv_settings_data_fetch_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:text="@string/datafetch" />

        <EditText
            android:id="@+id/et_settings_data_fetch_interval_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:maxEms="10"
            android:inputType="numberSigned"
            android:hint="@string/settings" />


    </GridLayout>
</LinearLayout>
